--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  background: #269CA4;
+  background: -moz-linear-gradient(top, #269CA4 0%, #A7A6CB 49%, #75325B 100%);
+  background: -webkit-linear-gradient(top, #269CA4 0%, #A7A6CB 49%, #75325B 100%);
+  background: linear-gradient(to bottom, #269CA4 0%, #A7A6CB 49%, #75325B 100%);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +14,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.MainContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 30px auto;
+  justify-content: center;
+  align-items: center;
+}
+.Buttons {
+  display: flex;
+  padding: 15px;
+}
+.Circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
 }
