--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 body {
-  background: #269CA4;
-  background: -moz-linear-gradient(top, #269CA4 0%, #A7A6CB 49%, #75325B 100%);
+  background: #1f787e;
+  background: -moz-linear-gradient(top, #269CA4 100%, #A7A6CB 100%, #75325B 100%);
   background: -webkit-linear-gradient(top, #269CA4 0%, #A7A6CB 49%, #75325B 100%);
   background: linear-gradient(to bottom, #269CA4 0%, #A7A6CB 49%, #75325B 100%);
+  background-size: contain;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
 code {
